[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.0.0",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.80",
    "langchain-openai>=0.3.35",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "tavily>=1.1.0",
    "typing>=3.10.0.0",
]
